Fixes issue where the logo would break out of bounds

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,6 +7,7 @@
   display: block;
   background: url('../../assets/img/lost-grid.svg') no-repeat 50% 50%;
   background-size: 100%;
+  max-width: 100%;
   &--large {
     width: 500px;
     height: 153px;
